<resources>
    <string name="app_name">AlarmClock</string>
    <string name="message">message</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="sound">Sound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="today">Today</string>
    <string name="snooze">Snooze</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="default_sound">Default sound</string>
</resources>